# kaori-protocol

./: .env.example  .gitignore  CONTRIBUTING.md  COPYRIGHT  Dockerfile  FLOW_SPEC.md  GOVERNANCE.md  INTEGRATION.md  LICENSE  NOTICE  OPEN_CORE.md  README.md  RELEASE.md  SECURITY.md  SPEC.md  TRADEMARKS.md  TRUTH_SPEC.md  kaori.db  kaori_protocol_whitepaper.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_demo.bat
.github/workflows/: validate_claims.yml
core/: README.md  __init__.py  confidence.py  consensus.py  engine.py  models.py  schema_loader.py  signals.py  signing.py  truthkey.py
core/db/: crud.py  database.py  models.py
core/validators/: __init__.py  pipeline.py
db/migrations/: 01_universal_schema.sql
examples/: end_to_end_demo.py  flow_v2_simulation.py  quick_start.py
examples/demo-sim/: README.md  comprehensive_demo.py  e2e_demo.py  lock_claim.py  system_test.py  validate_claims.py  verify_generalist.py
examples/demo-ui/: README.md  package-lock.json
examples/demo-ui/src/: App.jsx  (+1 more)
flow/: README.md
flow/api/: deps.py  main.py  missions.py  models.py  probes.py  truth.py  votes.py
legacy_archive/: FLOW_SPEC.md  TRUTH_SPEC.md
legacy_archive/core/: README.md  claimtype.py  consensus.py  engine_compat.py  models.py  models_compat.py  storage.py  timeout_handler.py
legacy_archive/flow/: README.md
legacy_archive/frontend/: README.md
legacy_archive/schemas/: README.md
legacy_archive/terraform/: bigquery.tf  compute.tf  iam.tf  storage.tf
legacy_archive/tests/: test_confidence.py  test_consensus.py  test_engine.py
legacy_archive/tools/: demo_lifecycle.py
schemas/earth/: flood_v1.yaml
schemas/meta/: claimtype.schema.json
terraform/: main.tf
tests/: test_compiler_purity.py  test_consensus.py  test_engine.py  test_flow_policy.py  test_signing.py  test_truthkey.py  test_validators.py
tools/: demo_lifecycle.py  inspect_state.py  new_claim.py  simulation_demo.py  validate_claims.py
(+20 files in other folders)
