[project]
name = "kaori-protocol"
version = "2.0.0"
description = "Kaori Protocol — Distributed Truth Compilation for Planetary-Scale Observation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "MSRO", email = "protocol@kaori.dev"}
]
keywords = ["kaori", "protocol", "truth", "distributed", "observation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Root package depends on all sub-packages
dependencies = [
    "kaori-truth>=2.0.0",
    "kaori-flow>=2.0.0",
    "kaori-db>=2.0.0",
    "kaori-api>=2.0.0",
]

[project.optional-dependencies]
# Full installation with all extras
full = [
    "kaori-truth[spatial]>=1.0.0",
    "uvicorn>=0.22.0",
    "python-jose[cryptography]>=3.3.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "flow"]  # Legacy packages for compatibility

# UV workspace configuration for monorepo
[tool.uv.workspace]
members = [
    "packages/kaori-truth",
    "packages/kaori-flow",
    "packages/kaori-db",
    "packages/kaori-api",
]

[tool.pytest.ini_options]
testpaths = ["tests", "packages/kaori-truth/tests", "packages/kaori-flow/tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    "__pycache__",
    "node_modules",
    "frontend",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line too long - handled by formatter
